@startuml


abstract class WebScrapperTemplate {
    + scrape(url: String): void
    - load_page(url: String): String
    - parse_content(content: String): void
    - extract_data(data): void
}

note right of WebScrapperTemplate
    Defines the template method 'scrape' that outlines the steps for web scraping.
    Subclasses implement specific steps like loading pages, parsing content, and extracting data.
end note

class BeautifulSoupScraper {
    - load_page(url: String): String
    - parse_content(content: String): void
    - extract_data(data): void
}

WebScrapperTemplate <|-- BeautifulSoupScraper

class RegexpScraper {
    - load_page(url: String): String
    - parse_content(content: String): void
    - extract_data(data): void
}

WebScrapperTemplate <|-- RegexpScraper

@enduml